--- a/airtable-api.cabal
+++ b/airtable-api.cabal
@@ -1,6 +1,6 @@
 name:                airtable-api
 version:             0.1.0.0
--- synopsis:
+synopsis:            Requesting and introspecting Tables within an Airtable project. 
 -- description:
 homepage:            https://github.com/ooblahman/airtable-api
 license:             BSD3
